<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="grade_12">Grade 12</string>
    <string name="btn_back">Back</string>
    <string name="_80">80%</string>
    <string name="close">Close</string>
    <string name="grade_report">Grade Report</string>
    <string name="mechanics_quiz_02">Mechanics Quiz - 02</string>
    <string name="passed">Passed</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="_01">01</string>
    <string name="incorrect_answers">Incorrect Answers</string>
    <string name="good_job_keep_practicing_to_score_100">Good Job! Keep practicing to score 100%.</string>
    <string name="review_quiz">Review Quiz</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="_04">04</string>
    <string name="create_amp_add_questions"><![CDATA[Create & Add Questions]]></string>
    <string name="quiz_title">Quiz Title</string>
    <string name="e_g_physics_term_test">e.g., Physics Term Test</string>
    <string name="category_topic">Category / Topic</string>
    <string name="e_g_mechanics">e.g., Mechanics</string>
    <string name="description">Description</string>
    <string name="enter_instructions">Enter instructions...</string>
    <string name="start_date">Start Date</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="due_date">Due Date</string>
    <string name="time_minutes">Time (Minutes)</string>
    <string name="e_g_30">e.g., 30</string>
    <string name="no_of_questions">No. of Questions</string>
    <string name="e_g_5">e.g., 5</string>
    <string name="add_question_form">+ Add Question Form</string>
    <string name="publish_complete_quiz">Publish Complete Quiz</string>
    <string name="question_x">Question X</string>
    <string name="type_question_text">Type question text...</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="correct_answer_a_b_c_or_d">Correct Answer (A, B, C, or D)</string>
    <string name="create_profile">Create Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="medium">Medium</string>
    <string name="create">Create</string>
    <string name="welcome_nto_edunova">Welcome\nto EduNova...</string>
    <string name="your_profile_is_nsuccessfully_created">Your Profile is\nsuccessfully created..</string>
    <string name="view_your_profile">View Your Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="my_courses">My Courses</string>
    <string name="my_quiz">My Quiz</string>
    <string name="grades">Grades</string>
    <string name="favourites">Favourites</string>
    <string name="my_teachers">My Teachers</string>
    <string name="downloads">Downloads</string>
    <string name="language">Language</string>
    <string name="payment_history">Payment History</string>
    <string name="log_out">Log Out</string>
    <string name="tharushi_perera">Tharushi Perera</string>
    <string name="tharushi_gmail_com">tharushi@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_back_tharushi">Welcome Back, Tharushi 👋</string>
    <string name="mrs_shriyani_gunawardhane">Mrs. Shriyani Gunawardhane</string>
    <string name="mr_sarath_kariyawasam">Mr. Sarath Kariyawasam</string>
    <string name="physics">Physics</string>
    <string name="about_this_course">About this course,</string>
    <string name="rs_6500">Rs. 6500</string>
    <string name="monthly_fee">Monthly Fee</string>
    <string name="join_with_us">Join with us</string>
    <string name="live_class">Live Class</string>
    <string name="who_will_guide_you">Who will guide you?</string>
    <string name="for_grade_12">For grade 12,</string>
    <string name="_24_weeks">24 Weeks</string>
    <string name="a_l">A/L</string>
    <string name="english">English</string>
    <string name="enrollment">Enrollment</string>
    <string name="summary">Summary</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="_123">123</string>
    <string name="_1234_5678_9876_5432">1234 5678 9876 5432</string>
    <string name="card_number">Card Number</string>
    <string name="bank_deposit_transfer">Bank Deposit / Transfer</string>
    <string name="bank_boc_bank_of_ceylon">Bank: BOC (Bank of Ceylon)</string>
    <string name="acc_name_lms_pvt_ltd">Acc Name: LMS (Pvt) Ltd</string>
    <string name="acc_no_87443921">Acc No: 87443921</string>
    <string name="upload_receipt_image">Upload Receipt Image</string>
    <string name="cvv">CVV</string>
    <string name="success">Success</string>
    <string name="total_paid">Total Paid</string>
    <string name="go_to_classroom">Go to Classroom</string>
    <string name="_4_2_mb_pdf_document">4.2 MB | PDF Document</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="dash_board">Dash Board</string>
    <string name="add_new">Add New</string>
</resources>